# cadmium

./: meson.build  pixi.toml
include/cadmium/: cadmium.hpp
src/: cadmium.cpp  meson.build
test/: cadmium_test.cpp  meson.build
